# block-battle

./: .gitignore  CMakeLists.txt  Makefile  README.md  blockbattle.cpp  defines.h  dumps.h  game.h  inputhandler.h  myai.cpp  myai.h  parsers.h
test/: test.txt
